Basic Setup Nightwatch

--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
+    "chromedriver": "^74.0.0",
     "codelyzer": "~4.5.0",
+    "geckodriver": "^1.16.2",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.0.0",
@@ -40,6 +42,7 @@
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "nightwatch": "^1.1.11",
     "prettier": "^1.17.1",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
